--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
     "diff": "^5.2.0",
     "framer-motion": "^11.2.10",
     "input-otp": "^1.2.4",
@@ -35,8 +34,10 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "yarn": "^1.22.22",
     "zod": "^3.23.8"
   },
